<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ficheros_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/ficheros_tableRow_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/ficheros_textView_fichero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ficheros_textView_filename"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/ficheros_editText_filename"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ficheros_hint_filename" >

                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/ficheros_tableRow_02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/ficheros_textView_texto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ficheros_textView_texto"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/ficheros_editText_texto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ficheros_hint_texto" />
        </TableRow>

        <TableRow
            android:id="@+id/ficheros_tableRow_03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/ficheros_textView_valor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ficheros_numero"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/ficheros_editText_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/row_car_brand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ficheros_internal"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/ficheros_button_save"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onSave"
            android:text="@string/button_save" />

        <Button
            android:id="@+id/framentmenu_launchbutton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onLoad"
            android:text="@string/ficheros_load" />
    </LinearLayout>

    <TextView
        android:id="@+id/fragmentinfo_helptext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ficheros_external"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button2"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onSaveExternal"
            android:text="@string/ficheros_save" />

        <Button
            android:id="@+id/button3"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onLoadExternal"
            android:text="@string/ficheros_load" />

    </LinearLayout>

    <TextView
        android:id="@+id/value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ficheros_database"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
            <Button
            android:id="@+id/button_dbSave"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onSaveDatabase"
            android:text="@string/ficheros_save" />

        <Button
            android:id="@+id/button_dbLoad"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onLoadDatabase"
            android:text="@string/ficheros_load" />
    </LinearLayout>

    <TextView
        android:id="@+id/ficheros_textView_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape1"
        android:text="@string/ficheros_result"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>