<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
   android:background="@android:color/white">

    <TextView
        android:id="@+id/row_car_brand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ff33b5e5"
        android:padding="5dp"
        android:text="@string/fragment_navigation_UsandoHTTP"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        >

        <Button
            android:id="@+id/network_navigation_button_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_blue"
            android:onClick="onConnectHTTP"
            android:text="@string/fragment_navigation_connect" 
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/network_navigation_button_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             style="?android:attr/buttonBarButtonStyle"
             android:background="@drawable/shape_blue"
            android:onClick="onConnectHTTPPost"
            android:text="@string/fragment_navigation_post" />

        <EditText
            android:id="@+id/network_navigation_edittext_postparams"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/fragment_navigation_postparams"
            android:imeOptions="actionDone"
            android:inputType="text" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/network_url_downloadprogress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" />

    <TextView
        android:id="@+id/fragmentinfo_helptext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ff33b5e5"
        android:padding="5dp"
        android:text="@string/fragment_navigation_usandoSockets"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/framentmenu_launchbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/shape_blue"
        android:onClick="onConnectSocket"
        android:text="@string/fragment_navigation_connect" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ff33b5e5"
        android:padding="5dp"
        android:text="@string/fragment_navigation_startservice"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/shape_blue"
        android:onClick="onNetworkService"
        android:text="@string/fragment_navigation_connect" />

</LinearLayout>