<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_white"
    android:orientation="horizontal"
    android:padding="2dp" >

    <ImageButton
        android:id="@+id/row_car_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/conext_borrar"
        android:src="@android:drawable/ic_delete" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tag"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:text="@+id/tag"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@android:color/black" >
        </TextView>

        <TextView
            android:id="@+id/row_car_brand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/row_car_brand"
            android:textAppearance="@style/blueSmall" />

    </LinearLayout>

    <TextView
        android:id="@+id/row_car_hp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:background="@drawable/shape1"
        android:text="@string/row_car_hp"
        android:textAppearance="@style/blueLarge" />

</LinearLayout>